sm ready elements

--- a/smashmag.html
+++ b/smashmag.html
@@ -19,6 +19,8 @@ content="text/html;charset=ISO-8859-1">
 
 
 <div class="fb-like-box" data-href="https://www.facebook.com/smashmag" data-width="292" data-height="550" data-show-faces="false" data-stream="true" data-show-border="true" data-header="false"></div>
-    
+
+<div class="fb-comments" data-href="http://dctfb.com/smashmag.html" data-width="470" data-num-posts="10"></div>
+
   </body>
 </html>
